fix: modify "to top" z-index

--- a/static/style.css
+++ b/static/style.css
@@ -123,6 +123,7 @@ body {
     right: 20px;
     bottom: 60px;
     height: 100px;
+    z-index: 10;
 }
 
 .sidebar .top-img {
